// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test dataparsing 1`] = `
Array [
  Object {
    "data": Array [
      -10,
      1.148660714285714,
    ],
    "x": -10,
  },
  Object {
    "data": Array [
      -17,
      1.131473214285714,
    ],
    "x": -17,
  },
  Object {
    "data": Array [
      -24,
      1.114285714285714,
    ],
    "x": -24,
  },
  Object {
    "data": Array [
      -31,
      1.0970982142857142,
    ],
    "x": -31,
  },
  Object {
    "data": Array [
      -40,
      1.075,
    ],
    "x": -38,
  },
  Object {
    "data": Array [
      -45,
      1.0627232142857144,
    ],
    "x": -45,
  },
  Object {
    "data": Array [
      -56,
      1.0357142857142858,
    ],
    "x": -52,
  },
  Object {
    "data": Array [
      -62,
      1.0483870967741935,
    ],
    "x": -59,
  },
  Object {
    "data": Array [
      -72,
      1,
    ],
    "x": -66,
  },
  Object {
    "data": Array [
      -75,
      1.0533333333333332,
    ],
    "x": -73,
  },
  Object {
    "data": Array [
      -85,
      0.9882352941176471,
    ],
    "x": -80,
  },
  Object {
    "data": Array [
      -87,
      0.9813934084272007,
    ],
    "x": -87,
  },
  Object {
    "data": Array [
      -94,
      0.9574468085106383,
    ],
    "x": -94,
  },
]
`;

exports[`Test dataparsing 2`] = `
Array [
  -71.34354838709677,
  -65,
  -58.00000000000001,
  -78.99999999999999,
  -84,
  -90,
  -72,
  -72,
  -43,
]
`;

exports[`With actual data 1`] = `
Array [
  Object {
    "data": Array [
      -10,
      0.899250613196589,
    ],
    "x": -10,
  },
  Object {
    "data": Array [
      -17,
      0.9257060719723947,
    ],
    "x": -17,
  },
  Object {
    "data": Array [
      -24,
      0.9521615307482005,
    ],
    "x": -24,
  },
  Object {
    "data": Array [
      -31,
      0.9786169895240063,
    ],
    "x": -31,
  },
  Object {
    "data": Array [
      -38,
      1.0050724482998121,
    ],
    "x": -38,
  },
  Object {
    "data": Array [
      -45.4,
      1.0330396475770924,
    ],
    "x": -45,
  },
  Object {
    "data": Array [
      -56.6,
      1.0753683816183817,
    ],
    "x": -52,
  },
  Object {
    "data": Array [
      -62.2,
      1.0770004369149153,
    ],
    "x": -59,
  },
  Object {
    "data": Array [
      -70.07142857142857,
      1.0618838234684627,
    ],
    "x": -66,
  },
  Object {
    "data": Array [
      -77.54149659863945,
      1.0414138761094436,
    ],
    "x": -73,
  },
  Object {
    "data": Array [
      -84.1375,
      1.024839463231463,
    ],
    "x": -80,
  },
  Object {
    "data": Array [
      -87,
      1.017646583850377,
    ],
    "x": -87,
  },
  Object {
    "data": Array [
      -94,
      1.000057009818027,
    ],
    "x": -94,
  },
]
`;

exports[`With actual data 2`] = `
Array [
  Object {
    "data": Array [
      -10,
      0.9461214995787034,
    ],
    "x": -10,
  },
  Object {
    "data": Array [
      -17,
      0.9502751284658078,
    ],
    "x": -17,
  },
  Object {
    "data": Array [
      -24,
      0.9544287573529121,
    ],
    "x": -24,
  },
  Object {
    "data": Array [
      -31,
      0.9585823862400165,
    ],
    "x": -31,
  },
  Object {
    "data": Array [
      -38,
      0.9627360151271208,
    ],
    "x": -38,
  },
  Object {
    "data": Array [
      -46.9,
      0.9680170575692963,
    ],
    "x": -45,
  },
  Object {
    "data": Array [
      -53.9,
      0.9721706864564007,
    ],
    "x": -52,
  },
  Object {
    "data": Array [
      -61.23333333333333,
      1.015654693356084,
    ],
    "x": -59,
  },
  Object {
    "data": Array [
      -70.54768518518519,
      0.9614388564830367,
    ],
    "x": -66,
  },
  Object {
    "data": Array [
      -76.94444444444446,
      0.963915761040731,
    ],
    "x": -73,
  },
  Object {
    "data": Array [
      -83.37222222222223,
      0.9445906479998282,
    ],
    "x": -80,
  },
  Object {
    "data": Array [
      -87.4752380952381,
      0.937309419218305,
    ],
    "x": -87,
  },
  Object {
    "data": Array [
      -94,
      0.9257305500050553,
    ],
    "x": -94,
  },
]
`;
